kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: render
  name: render
  namespace: mynamespace
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: render
