kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: render
  namespace: mynamespace
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  rules:
  - host: render.kessandbox.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: render
          servicePort: http
      - path: /render
        backend:
          serviceName: render
          servicePort: http
